--- a/feretui/resources/templates/common.tmpl
+++ b/feretui/resources/templates/common.tmpl
@@ -113,7 +113,7 @@
     </button>
   </template>
   <template id="view-buttons-header">
-    <div class="buttons">
+    <div class="buttons is-centered">
       {% for button in header_buttons %}
       {{ button }}
       {% endfor %}
@@ -212,20 +212,6 @@
         {{ field(**{'hx-post': hx_post, 'hx-params': field.name, 'hx-trigger': "keyup[key=='Enter'],blur"}) }}
       </div>
       </div>
-      {% endfor %}
-    </div>
-  </template>
-  <template id="view-readonly-form">
-    <div class="container">
-      {% for field in form %}
-      {{ field(readonly=True) }}
-      {% endfor %}
-    </div>
-  </template>
-  <template id="view-readwrite-form">
-    <div class="container">
-      {% for field in form %}
-      {{ field(readonly=True) }}
       {% endfor %}
     </div>
   </template>
