--- a/feretui/resources/templates/common.tmpl
+++ b/feretui/resources/templates/common.tmpl
@@ -10,15 +10,15 @@
       <span>Create</span>
     </button>
   </template>
-  <template id="view-do-create-button">
+  <template id="view-do-save-button">
     <button
       class="button is-primary"
       type="submit"
     >
       <span class="icon">
-        <i class="fa-solid fa-plus"></i>
+        <i class="fa-regular fa-pen-to-square"></i>
       </span>
-      <span>Create</span>
+      <span>save</span>
     </button>
   </template>
   <template id="view-goto-selected-delete-button">
@@ -64,17 +64,6 @@
         <i class="fa-regular fa-pen-to-square"></i>
       </span>
       <span>Edit</span>
-    </button>
-  </template>
-  <template id="view-do-update-button">
-    <button
-      class="button is-info"
-      type="submit"
-    >
-      <span class="icon">
-        <i class="fa-regular fa-pen-to-square"></i>
-      </span>
-      <span>Update</span>
     </button>
   </template>
   <template id="view-goto-return-button">
