--- a/feretui/resources/templates/resource.tmpl
+++ b/feretui/resources/templates/resource.tmpl
@@ -114,9 +114,26 @@
   </template>
   <template id="view-readwrite-form">
     <div class="container">
+      {% if error %}
+      <div class="notification is-danger">
+        {{ error }}
+      </div>
+      {% endif %}
       {% for field in form %}
-      {{ field(readonly=True) }}
+      {{ field }}
       {% endfor %}
+    </div>
+  </template>
+  <template id="feretui-resource-create-header">
+    <div class="columns">
+      <div id="label" class="column is-3">
+        <h1>{{ label }}</h1>
+      </div>
+      <div id="buttons" class="column">
+        <include template="view-buttons-header"/>
+      </div>
+      <div is="status" class="column is-3">
+      </div>
     </div>
   </template>
   <template id="feretui-resource-read-header">
