--- a/feretui/resources/templates/common.tmpl
+++ b/feretui/resources/templates/common.tmpl
@@ -2,7 +2,7 @@
   <template id="view-goto-create-button">
     <button
       class="button is-primary"
-      hx-get="{{ feretui.base_url }}/action/goto?{{ create_view_qs }}"
+      hx-get="{{ url }}"
     >
       <span class="icon">
         <i class="fa-solid fa-plus"></i>
