--- a/feretui/resources/templates/resource.tmpl
+++ b/feretui/resources/templates/resource.tmpl
@@ -113,7 +113,7 @@
     </div>
   </template>
   <template id="view-readwrite-form">
-    <div class="container">
+    <div class="container mb-4">
       {% if error %}
       <div class="notification is-danger">
         {{ error }}
