Added UResource and EditView

--- a/feretui/resources/templates/common.tmpl
+++ b/feretui/resources/templates/common.tmpl
@@ -93,7 +93,7 @@
     <button 
       class="button is-ghost"
       type="reset"
-      hx-get="{{ feretui.base_url }}/action/goto?{{ return_view_qs }}"
+      hx-get="{{ url }}"
     >
       <span class="icon">
         <i class="fa-solid fa-xmark"></i>
