Updated class on button

--- a/feretui/resources/templates/common.tmpl
+++ b/feretui/resources/templates/common.tmpl
@@ -57,7 +57,7 @@
   </template>
   <template id="view-goto-edit-button">
     <button
-      class="button is-info"
+      class="button is-primary"
       hx-get="{{ url }}"
     >
       <span class="icon">
@@ -68,7 +68,7 @@
   </template>
   <template id="view-goto-return-button">
     <button
-      class="button"
+      class="button is-ghost"
       hx-get="{{ url }}"
     >
       <span class="icon">
