Removed some use of the contextvars

--- a/feretui/resources/templates/resource.tmpl
+++ b/feretui/resources/templates/resource.tmpl
@@ -167,7 +167,7 @@
         {{ error }}
       </div>
       {% endif %}
-      <h2>Selected {{ resource.get_label() }} :</h2>
+      <h2>Selected {{ resource.get_label(feretui, session) }} :</h2>
       <ul>
         {% for entry in entries %}
         <li>
