--- a/feretui/templates/pages.tmpl
+++ b/feretui/templates/pages.tmpl
@@ -36,7 +36,7 @@
   </template>
   <template id="feretui-page-aside">
     <div class="columns">
-      <div class="column is-narrow footer pt-5 pb-5">
+      <div class="column is-narrow footer pt-5 pb-5 is-hidden-print">
         <aside class="menu">
           <ul class="menu-list">
           {% for menu in menus %}
