--- a/feretui/templates/feretui.tmpl
+++ b/feretui/templates/feretui.tmpl
@@ -47,10 +47,7 @@
             hx-target="#feretui-body"
             hx-swap="innerHTML"
           >
-            <img 
-              src="{{ feretui.get_image_url('logo.png') }}"
-              alt="{{ feretui.title }}"
-            >
+            <img src="{{ feretui.get_image_url('logo.png') }}" alt="">
           </a>
           <a
             id="feretui-app-header-burger-button"
