--- a/feretui/templates/pages.tmpl
+++ b/feretui/templates/pages.tmpl
@@ -25,7 +25,7 @@
         <h1>Welcome to the FeretUI's client</h1>
         <div class="container">
           <figure class="image 1by1">
-            <img src="/feretui/static/logo.png">
+            <img src="/feretui/static/logo.png" alt="">
           </figure>
         </div>
         <p>
