--- a/feretui/templates/menus.tmpl
+++ b/feretui/templates/menus.tmpl
@@ -14,8 +14,16 @@
     </a>
   </template>
   <template id="toolbar-dropdown-menu">
-    <div class="navbar-item has-dropdown is-hoverable">
-      <a class="navbar-link" aria-description="{{ description }}">
+    <div 
+      class="navbar-item has-dropdown is-boxed"
+      aria-expanded="false"
+      aria-label="{{ label }}"
+      aria-description="{{ description }}"
+      tabindex="0"
+      role="navigation"
+      _="on click or keyup[key=='Enter'] toggle .is-active on me"
+    >
+      <a class="navbar-link">
         <include template="feretui-icon" />
         <strong>{{ label }}</strong>
         <include template="feretui-description" />
