--- a/feretui/templates/menus.tmpl
+++ b/feretui/templates/menus.tmpl
@@ -94,7 +94,7 @@
     </a>
   </template>
   <template id="aside-header-menu">
-    <div>
+    <div aria-label="{{ label }}" aria-description="{{ description }}">
       <p class="menu-label">
         <include template="feretui-icon" />
         <span><strong>{{ label }}</strong></span>
