--- a/feretui/templates/feretui.tmpl
+++ b/feretui/templates/feretui.tmpl
@@ -119,7 +119,7 @@
     </footer>
   </template>
   <template id="feretui-description">
-    <span>
+    <span aria-hidden="true">
       {% if description %}
       <span 
         class="ml-0 icon has-tooltip-bottom has-tooltip-arrow"
@@ -131,7 +131,7 @@
     </span>
   </template>
   <template id="feretui-icon">
-    <span>
+    <span aria-hidden="true">
       {% if icon %}
       <span 
         class="ml-0 mr-0 icon"
