--- a/feretui/resources/templates/common.tmpl
+++ b/feretui/resources/templates/common.tmpl
@@ -116,47 +116,56 @@
       <div class="column">
         {% if paginations %}
         <nav class="pagination" role="pagination" arial-label="pagination">
-          {% if paginations[0] == offset %}
-          <a class="pagination-previous" disabled><i class="fa-solid fa-chevron-left"></i></a>
-          {% endif %}
-          {% if paginations[0] != offset %}
-          <a
-            class="pagination-previous"
-            hx-get="{{ feretui.base_url}}/action/resource?action=pagination&offset={{offset - limit}}"
-          >
-            <i class="fa-solid fa-chevron-left"></i>
-          </a>
-          {% endif %}
-          {% if paginations[-1] == offset %}
-          <a class="pagination-next" disabled><i class="fa-solid fa-chevron-right"></i></a>
-          {% endif %}
-          {% if paginations[-1] != offset %}
-          <a
-            class="pagination-next"
-            hx-get="{{ feretui.base_url}}/action/resource?action=pagination&offset={{offset + limit}}"
-          >
-            <i class="fa-solid fa-chevron-right"></i>
-          </a>
-          {% endif %}
           <ul class="pagination-list">
             {% for pagination in paginations %}
             <li>
               {% if pagination == offset %}
-              <a class="pagination-link is-current">
+              <button class="pagination-link is-current">
                 {{ pagination + 1 }}-{{ [pagination + limit, dataset.total]|min }}
-              </a>
+                <span class="is-sr-only">Selected</span>
+              </button>
               {% endif %}
               {% if pagination != offset %}
-              <a
+              <button
                 class="pagination-link"
                 hx-get="{{ feretui.base_url}}/action/resource?action=pagination&offset={{ pagination }}"
               >
                 {{ pagination + 1 }}-{{ [pagination + limit, dataset.total]|min }}
-              </a>
+              </button>
               {% endif %}
             </li>
             {% endfor %}
           </ul>
+          {% if paginations[0] == offset %}
+          <button class="pagination-previous" disabled>
+            <i class="fa-solid fa-chevron-left"></i>
+            <span class="is-sr-only">Previous</span>
+          </button>
+          {% endif %}
+          {% if paginations[0] != offset %}
+          <button
+            class="pagination-previous"
+            hx-get="{{ feretui.base_url}}/action/resource?action=pagination&offset={{offset - limit}}"
+          >
+            <i class="fa-solid fa-chevron-left"></i>
+            <span class="is-sr-only">Previous</span>
+          </button>
+          {% endif %}
+          {% if paginations[-1] == offset %}
+          <button class="pagination-next" disabled>
+            <i class="fa-solid fa-chevron-right"></i>
+            <span class="is-sr-only">Next</span>
+          </button>
+          {% endif %}
+          {% if paginations[-1] != offset %}
+          <button
+            class="pagination-next"
+            hx-get="{{ feretui.base_url}}/action/resource?action=pagination&offset={{offset + limit}}"
+          >
+            <i class="fa-solid fa-chevron-right"></i>
+            <span class="is-sr-only">Next</span>
+          </button>
+          {% endif %}
         </nav>
         {% endif %}
       </div>
