--- a/feretui/templates/feretui.tmpl
+++ b/feretui/templates/feretui.tmpl
@@ -43,11 +43,13 @@
           <a 
             class="navbar-item has-tooltip-right has-tooltip-arrow"
             data-tooltip="Go to the homepage"
+            href="?page=homepage"
             hx-get="{{ feretui.base_url }}/action/goto?page=homepage"
             hx-target="#feretui-body"
             hx-swap="innerHTML"
           >
             <img src="{{ feretui.get_image_url('logo.png') }}" alt="">
+            <span class="is-sr-only">Go to the homepage</span>
           </a>
           <a
             id="feretui-app-header-burger-button"
@@ -82,11 +84,18 @@
              {{ feretui.auth.menus.render(feretui, session) | safe }}
              {% endif %}
             {% else %}
-            <div class="navbar-item has-dropdown is-hoverable">
+            <div 
+              class="navbar-item has-dropdown is-boxed"
+              aria-expanded="false"
+              aria-label="{{ label }}"
+              tabindex="0"
+              role="navigation"
+              _="on click or keyup[key=='Enter'] toggle .is-active on me"
+            >
               <a class="navbar-link">
-                {{ session.user }}
+                <strong>{{ session.user }}</strong>
               </a>
-              <div class="navbar-dropdown is-boxed is-right">
+              <div class="navbar-dropdown is-right">
                 {% if feretui.menus.user %}
                   {% for menu in feretui.menus.user %}
                     {% if menu.is_visible(session) %}
@@ -97,7 +106,10 @@
                 {% endif %}
                 <a
                   class="navbar-item"
+                  href="/feretui/action/logout"
                   hx-post="/feretui/action/logout"
+                  role="button"
+                  tabindex="0"
                 >
                   Log out
                 </a>
@@ -119,7 +131,7 @@
     </footer>
   </template>
   <template id="feretui-description">
-    <span>
+    <span aria-hidden="true">
       {% if description %}
       <span 
         class="ml-0 icon has-tooltip-bottom has-tooltip-arrow"
@@ -131,7 +143,7 @@
     </span>
   </template>
   <template id="feretui-icon">
-    <span>
+    <span aria-hidden="true">
       {% if icon %}
       <span 
         class="ml-0 mr-0 icon"
