--- a/feretui/resources/templates/resource.tmpl
+++ b/feretui/resources/templates/resource.tmpl
@@ -3,7 +3,7 @@
     <div id="resource-{{ rcode }}-view-{{ vcode }}" class="container is-fluid">
       <form>
         <include template="view-multi-header" />
-        <div class="columns">
+        <div class="columns is-desktop">
           <div class="column">
             <include template="view-pagination" />
             <div class="table-container">
