--- a/feretui/templates/pages.tmpl
+++ b/feretui/templates/pages.tmpl
@@ -35,7 +35,7 @@
     </div>
   </template>
   <template id="feretui-page-aside">
-    <div class="columns">
+    <div class="columns is-desktop">
       <div class="column is-narrow footer pt-5 pb-5 is-hidden-print">
         <aside class="menu">
           <ul class="menu-list">
