--- a/feretui/templates/feretui.tmpl
+++ b/feretui/templates/feretui.tmpl
@@ -108,8 +108,6 @@
                   class="navbar-item"
                   href="/feretui/action/logout"
                   hx-post="/feretui/action/logout"
-                  role="button"
-                  tabindex="0"
                 >
                   Log out
                 </a>
@@ -123,10 +121,32 @@
   </template>
   <template id="feretui-client-footer">
     <footer class="is-hidden-print">
-      <div class="content has-text-centered">
-        <p>
-          <strong>FeretUI</strong>by Js Suzanne.
-        </p>
+      <div class="container">
+        <div class="columns is-desktop">
+          <div class="column is-2-desktop">
+            <p>
+              <a 
+                class="navbar-item"
+                href="?page=sitemap"
+                hx-get="{{ feretui.base_url }}/action/goto?page=sitemap"
+                hx-target="#feretui-body"
+                hx-swap="innerHTML"
+              >
+                <span class="ml-0 mr-0 icon">
+                  <i class="fa-solid fa-sitemap"></i>
+                </span>
+                <strong>Sitemap</strong>
+              </a>
+            </p>
+          </div>
+          <div class="column content has-text-centered">
+            <p>
+              <strong>FeretUI</strong>by Js Suzanne.
+            </p>
+          </div>
+          <div class="column is-2-desktop">
+          </div>
+        </div>
       </div>
     </footer>
   </template>
